conditions.Conditions.scala.error
Compilation error:
Conditions:1: error: '(' expected but identifier found.
if isFacingWall()  {forward()}
   ^Conditions:4: error: illegal start of simple expression
	}
        ^